// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Containers/Match/ValidIcon renders correctly when invalid 1`] = `
<div
  className="MuiTooltip-root-1"
>
  <svg
    aria-describedby={undefined}
    aria-hidden="true"
    className="MuiSvgIcon-root-10"
    color="red"
    focusable="false"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "left": 5,
        "opacity": 0.8,
        "position": "absolute",
        "top": 5,
      }
    }
    viewBox="0 0 24 24"
  >
    <path
      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
    />
  </svg>
  <div
    className="MuiTooltip-popper-2 MuiTooltip-popperClose-3"
    data-placement={undefined}
    data-x-out-of-boundaries={undefined}
    style={
      Object {
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
      }
    }
  >
    <div
      aria-hidden={true}
      className="MuiTooltip-tooltip-4 MuiTooltip-tooltipRight-6"
      id={undefined}
      role="tooltip"
    >
      Paris invalide
    </div>
  </div>
</div>
`;

exports[`Containers/Match/ValidIcon renders correctly when valid 1`] = `
<div
  className="MuiTooltip-root-1"
>
  <svg
    aria-describedby={undefined}
    aria-hidden="true"
    className="MuiSvgIcon-root-10"
    color="green"
    focusable="false"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "left": 5,
        "opacity": 0.8,
        "position": "absolute",
        "top": 5,
      }
    }
    viewBox="0 0 24 24"
  >
    <path
      d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
    />
  </svg>
  <div
    className="MuiTooltip-popper-2 MuiTooltip-popperClose-3"
    data-placement={undefined}
    data-x-out-of-boundaries={undefined}
    style={
      Object {
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
      }
    }
  >
    <div
      aria-hidden={true}
      className="MuiTooltip-tooltip-4 MuiTooltip-tooltipRight-6"
      id={undefined}
      role="tooltip"
    >
      Paris enregistré
    </div>
  </div>
</div>
`;
